[v2 branch]

* Improved some documentation, much more to come
* Tagged many modules as @private to remove from YARD documentation
* Added YARD as development dependency for a massive documentation effort
* Renamed Formtastic::SemanticFormHelper to Formtastic::Helpers::FormHelper (SemanticFormHelper still exists as a module which includes the new module, need to handle deprecation notices somehow)
* Renamed Formtastic::SemanticFormBuilder to Formtastic::FormBuilder (SemanticFormBuilder still exists as a subclass, need to handle deprecation notices somehow)
* Massive refactoring of formtastic.rb into around 30 files and modules like StringInput and ButtonsHelper
* Removed chunks of Rails 2 specific code, tests and documentation
* Removed formtastic_stylesheet_link_tag

1.2.3

* Removed deprecated methods input_field_set, button_field_set, boolean_select_input, boolean_radio_input and boolean_radio_input
* Removed deprecated :class option on commit_button (use :input_html instead)
* Fixed that stylesheets and initializers directories would be removed on uninstalling
* Fixed some documentation and formatting
* Fixed test coverage issues under Ruby 192 and Rails 2
* Fixed that input_html options were not being passed down to checkbox tags
* Changed internal duplication of the options hash so that the same options hash can be re-used over multiple inputs without being altered
* Changed internal configuration to use class_attribute when available (Rails 3) to avoid deprecation warnings
* Added Rails 3 compatible form generator templates in addition to existing Rails 2 support
* Added reflection on allow_blank option when determining the 'required' status of an input


1.2.2

* Removed deprecated aliased input names (:as => :boolean_select, :as => :boolean_radio_input
* Removed deprecated aliased method names (input_field_set, button_field_set)
* Removed deprecated :class => 'whatever' on commit_button